<resources>
    <string name="app_name">RedEvy</string>
    <string name="title_activity_prueba">PruebaActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña </string>
    <string name="login">Ingresar</string>
    <string name="dont_have_account">¿No tienes cuenta?, </string>
    <string name="create_here">Crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_button_createaccount">Únete</string>
    <string name="toolbar_title_createaccount">Crear Cuenta</string>
    <string name="username_card">Evelyn Ancajima</string>
    <string name="firstword_card">Hace</string>
    <string name="secondword_card">4 días</string>
    <string name="likesNumber_card">100 Me Gusta</string>
    <string name="bottom_search">Buscar</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_profile">Yo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="secondword_detail">Me gusta</string>
    <string name="titleimagedetail">\"Todo copas en la playa\"</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.</string>
    <string name="transitionname_picture">transitionnamepicture</string>
</resources>
