<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/picturesCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    cardview:cardCornerRadius="@dimen/cardCornerRadius"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/pictureCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardview"
            android:background="@drawable/image"
            android:scaleType="centerCrop"
            android:transitionName="@string/transitionname_picture"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@color/backgroundtext_card"
            >

        <TextView
            android:id="@+id/userNameCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_card"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_usernamee_card"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/firstWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstword_card"
                android:textColor="@android:color/white"
                android:textSize="@dimen/firstrod_textsize_card"
                />

            <TextView
                android:id="@+id/secondWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secondword_card"
                android:textColor="@android:color/white"
                android:textSize="@dimen/firstrod_textsize_card"
                android:layout_marginLeft="@dimen/timecard_marginleft_card"
                />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_margincard"
                >
                <CheckBox
                    android:id="@+id/likeCheckCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"
                    />
                <TextView
                    android:id="@+id/likesNumberCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likesNumber_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstrod_textsize_card"
                    android:layout_marginLeft="@dimen/timecard_marginleft_card"
                    />

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>


</android.support.v7.widget.CardView>